# Parking

./: .gitignore  CMakeLists.txt  GateController.cpp  README.md  SerialPort.cpp  SerialPort.hpp  config.txt  fake_barrier.py  main.cpp  swagger.yaml
Emulators/Barrier/: fake_barrier.py
Emulators/ParkingClient-iOS/ParkingClient-iOS/: AppDelegate.swift  BarrierViewModel.swift  Info.plist  SceneDelegate.swift  SocketService.swift  UDPListener.swift  ViewController.swift
Emulators/ParkingClient-iOS/ParkingClient-iOS.xcodeproj/: project.pbxproj
Emulators/ParkingClient-iOS/ParkingClient-iOS.xcodeproj/project.xcworkspace/xcuserdata/mvc.xcuserdatad/: UserInterfaceState.xcuserstate
Emulators/ParkingClient-iOS/ParkingClient-iOS.xcodeproj/xcuserdata/mvc.xcuserdatad/xcschemes/: xcschememanagement.plist
Emulators/ParkingClient-iOS/ParkingClient-iOS/Models/: Message.swift
Emulators/RFIDTool/: main.cpp
include/: Database.hpp  GateController.hpp  ModbusUtils.hpp  ParkingSystem.hpp  SerialPort.hpp  ServiceBeacon.hpp
src/: Database.cpp  GateController.cpp  NetworkServer.cpp  ParkingSystem.cpp  SerialPort.cpp  ServiceBeacon.cpp  main.cpp
